--- a/views/about.html
+++ b/views/about.html
@@ -157,7 +157,8 @@
               <div class="text-center mb-11 mb-lg-24" data-aos="zoom-in" data-aos-duration="500" data-aos-once="true">
                 <h2 class="font-size-11 mb-5">About us</h2>
                 <p class="font-size-7 mb-0">
-                  We are a Synthetic Biology club based in Canyon Crest Academy. Read more about our accomplishments and why we are qualified to host this camp!
+                  We are a Synthetic Biology club based in Canyon Crest Academy. Read more about our accomplishments and why we
+                  are qualified to host this camp!
                 </p>
               </div>
             </div>
@@ -175,65 +176,64 @@
           </div>
         </div>
       </div>
-    </div>
 
-    <div class="pb-11 pb-md-15 pb-lg-27">
-      <div class="container">
-        <div class="row justify-content-center">
-          <div class="col-xl-5 col-lg-6 col-sm-9">
-            <div class="text-center mb-13 mb-lg-16" data-aos="zoom-in" data-aos-duration="500" data-aos-once="true">
-              <h2 class="font-size-10 mb-0 letter-spacing-n83">About CCA iGEM</h2>
-            </div>
-          </div>
-        </div>
-        <div class="row align-items-center justify-content-center">
-          <!-- Right -->
-          <div class="col-xl-5 col-lg-5 col-md-5 col-xs-10">
-            <div class="about-content-image-group-1 mb-8 mb-lg-0 mr-lg-4">
-              <div class="img-1">
-                <img
-                  class="w-100 rounded-10"
-                  src="/image/masonry/unknown-8.png"
-                  alt=""
-                  data-aos="fade-right"
-                  data-aos-duration="600"
-                  data-aos-once="true"
-                />
-                <div class="img-2 z-index-n1 mt-n13">
-                  <img
-                    class="w-100"
-                    src="/image/l4/dot-pattern-black.png"
-                    alt=""
-                    data-aos="fade-right"
-                    data-aos-duration="500"
-                    data-aos-once="true"
-                  />
-                </div>
+      <div class="pb-11 pb-md-15 pb-lg-27">
+        <div class="container">
+          <div class="row justify-content-center">
+            <div class="col-xl-5 col-lg-6 col-sm-9">
+              <div class="text-center mb-13 mb-lg-16" data-aos="zoom-in" data-aos-duration="500" data-aos-once="true">
+                <h2 class="font-size-10 mb-0 letter-spacing-n83">About CCA iGEM</h2>
               </div>
             </div>
           </div>
-          <!-- Right -->
-          <!-- Left -->
-          <div class="col-xl-6 col-lg-7 col-md-7 col-xs-10">
-            <div class="mx-lg-14 mx-xl-14" data-aos="fade-left" data-aos-duration="600" data-aos-once="true">
-              <p class="heading-default-color font-size-6 mb-4 mb-lg-9">
-                iGEM, short for International Genetically Engineered Machine, is a synthetic biology competition for high
-                schoolers, undergraduates, graduate students, and entrepreneurs, in which teams develop SynBio solutions to
-                problems in today’s society. Students work to display their leadership, interest in the community, inclusivity,
-                and entrepreneurship.
-              </p>
-              <p class="heading-default-color font-size-6 mb-5 mb-lg-13">
-                We focus a lot on our education. Last year, we ran iGEM camp and wrote a book about Biochemistry that we published to
-                Amazon, which won us the Best Education award. We also received a
-                gold medal overall and were among the top 10 high school teams internationally.
-              </p>
+          <div class="row align-items-center justify-content-center">
+            <!-- Right -->
+            <div class="col-xl-5 col-lg-5 col-md-5 col-xs-10">
+              <div class="about-content-image-group-1 mb-8 mb-lg-0 mr-lg-4">
+                <div class="img-1">
+                  <img
+                    class="w-100 rounded-10"
+                    src="/image/masonry/unknown-8.png"
+                    alt=""
+                    data-aos="fade-right"
+                    data-aos-duration="600"
+                    data-aos-once="true"
+                  />
+                  <div class="img-2 z-index-n1 mt-n13">
+                    <img
+                      class="w-100"
+                      src="/image/l4/dot-pattern-black.png"
+                      alt=""
+                      data-aos="fade-right"
+                      data-aos-duration="500"
+                      data-aos-once="true"
+                    />
+                  </div>
+                </div>
+              </div>
             </div>
+            <!-- Right -->
+            <!-- Left -->
+            <div class="col-xl-6 col-lg-7 col-md-7 col-xs-10">
+              <div class="mx-lg-14 mx-xl-14" data-aos="fade-left" data-aos-duration="600" data-aos-once="true">
+                <p class="heading-default-color font-size-6 mb-4 mb-lg-9">
+                  iGEM, short for International Genetically Engineered Machine, is a synthetic biology competition for high
+                  schoolers, undergraduates, graduate students, and entrepreneurs, in which teams develop SynBio solutions to
+                  problems in today’s society. Students work to display their leadership, interest in the community, inclusivity,
+                  and entrepreneurship.
+                </p>
+                <p class="heading-default-color font-size-6 mb-5 mb-lg-13">
+                  We focus a lot on our education. Last year, we ran iGEM camp and wrote a book about Biochemistry that we
+                  published to Amazon, which won us the Best Education award. We also received a gold medal overall and were among
+                  the top 10 high school teams internationally.
+                </p>
+              </div>
+            </div>
+            <!-- Left End -->
           </div>
-          <!-- Left End -->
         </div>
       </div>
-    </div>
-    <!-- <div class="pb-11 pb-md-15 pb-lg-27">
+      <!-- <div class="pb-11 pb-md-15 pb-lg-27">
       <div class="container">
         <div class="col-4">
           Lorem ipsum dolor, sit amet consectetur adipisicing elit. In, ex sint? Obcaecati tenetur saepe ut reiciendis, facilis
@@ -252,63 +252,68 @@
         </div>
       </div>
     </div> -->
-    <!-- Footer Area -->
-    <footer class="footer-area-l-12 position-relative">
-      <div class="container">
-        <div class="row justify-content-center">
-          <div class="col-lg-7 col-md-11 pl-lg-6" data-aos="fade-right" data-aos-duration="800" data-aos-once="true">
-            <div class="row">
-              <div class="col-sm-3 col-xs-6">
-                <div class="footer-widget widget2">
-                  <p>Help menu</p>
-                  <ul class="widget-links pl-0 list-unstyled">
-                    <li><a href="">About</a></li>
-                    <li><a href="">Features</a></li>
-                    <li><a href="">Works</a></li>
-                    <li><a href="">Career</a></li>
-                  </ul>
+      <!-- Footer Area -->
+
+      <footer class="footer-area-l-12 position-relative">
+        <div class="container">
+          <div class="row justify-content-center">
+            <div class="col-lg-7 col-md-11 pl-lg-6" data-aos="fade-right" data-aos-duration="800" data-aos-once="true">
+              <div class="row">
+                <div class="col-sm-3 col-xs-6">
+                  <div class="footer-widget widget2">
+                    <p>Help menu</p>
+                    <ul class="widget-links pl-0 list-unstyled">
+                      <li><a href="/views/camp-info.html">Camp Info</a></li>
+                      <li><a href="/views/about.html">About Us</a></li>
+                      <li><a href="#">Support</a></li>
+                    </ul>
+                  </div>
                 </div>
-              </div>
-              <div class="col-sm-4 col-xs-6">
-                <div class="footer-widget widget3">
-                  <ul class="widget-links pl-0 list-unstyled">
-                    <li><a href="">Contact </a></li>
-                    <li><a href="">Help & Support</a></li>
-                    <li><a href="">Privacy Policy</a></li>
-                    <li><a href="">Terms & Conditions</a></li>
-                  </ul>
+                <div class="col-sm-4 col-xs-6">
+                  <div class="footer-widget widget3">
+                    <ul class="widget-links pl-0 list-unstyled">
+                      <li><a href="mailto:ccaigem2022@gmail.com">Contact </a></li>
+                      <li><a href="">Privacy Policy</a></li>
+                      <li><a href="">Terms & Conditions</a></li>
+                    </ul>
+                  </div>
                 </div>
-              </div>
-              <div class="col-sm-5 col-xs-6 pl-lg-0">
-                <div class="footer-widget widget4">
-                  <p class="widget-title">Products</p>
-                  <ul class="widget-links pl-0 list-unstyled">
-                    <li><a href="">Essential Landing Page</a></li>
-                    <li><a href="">Alpha Dashboard Pro</a></li>
-                    <li><a href="">Karnel Admin Dashboard</a></li>
-                    <li><a href="">Gray UI Kit</a></li>
-                  </ul>
+                <div class="col-sm-5 col-xs-6 pl-lg-0">
+                  <div class="footer-widget widget4">
+                    <p class="widget-title">General</p>
+                    <ul class="widget-links pl-0 list-unstyled">
+                      <li><a>&copy; CCA iGEM 2022.</a></li>
+                      <li>
+                        <a href="https://instagram.com/cca.igem" style="padding-right: 3px" target="_blank">
+                          <i class="fa-brands fa-instagram"></i
+                        ></a>
+                        <a href="mailto:ccaigem2022@gmail.com" target="_blank"> <i class="fa-regular fa-envelope"></i> </a>
+                      </li>
+                    </ul>
+                  </div>
                 </div>
               </div>
             </div>
-          </div>
-          <div class="col-lg-5 col-md-8 col-sm-11" data-aos="fade-left" data-aos-duration="800" data-aos-once="true">
-            <div class="footer-subs-form-l-12">
-              <p>Subscribe to our newsletter</p>
-              <h6>Subscribe to get lastest offers, news and events announcements. No spam in your inbox.</h6>
-              <div class="input-group">
-                <input type="text" class="form-control" placeholder="Enter your email address" aria-label="" />
-                <div class="input-group-append">
-                  <button class="btn border-0 focus-reset" type="button">
-                    <i class="icon icon-tail-right text-white"></i>
-                  </button>
-                </div>
+            <div class="col-lg-5 col-md-8 col-sm-11" data-aos="fade-left" data-aos-duration="800" data-aos-once="true">
+              <div class="footer-subs-form-l-12">
+                <p>Join our mailing list</p>
+                <h6>Get the latest updates and announcements about our camp. No spam in your inbox.</h6>
+                <form name="mailing-list" netlify>
+                  <div class="input-group">
+                    <input name="email" type="text" class="form-control" placeholder="Enter your email address" aria-label="" />
+                    <div class="input-group-append">
+                      <button class="btn border-0 focus-reset" type="button">
+                        <i class="fas fa-angle-right text-white"></i>
+                      </button>
+                    </div>
+                  </div>
+                </form>
               </div>
             </div>
           </div>
         </div>
-      </div>
-    </footer>
+      </footer>
+    </div>
     <script src="/plugins/menu/menu.js" type="module"></script>
     <script src="/js/index.js" type="module"></script>
   </body>
