--- a/views/camp-info.html
+++ b/views/camp-info.html
@@ -364,7 +364,7 @@
             <div class="col-lg-5 col-md-6">
               <div class="image-content-box" data-aos="fade-up" data-aos-delay="400" data-aos-duration="1000">
                 <div class="case-study-area-image image-hover-style-01 overflow-hidden">
-                  <img class="w-100" src="/image/masonry/unknown-2.png" alt="image" />
+                  <img class="w-100" src="/image/daily/day-1.jpg" alt="image" />
                 </div>
                 <div class="content">
                   <h4>Day One - Biology</h4>
@@ -373,7 +373,7 @@
               </div>
               <div class="image-content-box" data-aos="fade-up" data-aos-delay="600" data-aos-duration="1000">
                 <div class="case-study-area-image image-hover-style-01 overflow-hidden">
-                  <img class="w-100" src="/image/masonry/unknown-3.png" alt="image" />
+                  <img class="w-100" src="/image/daily/day-2.jpg" alt="image" />
                 </div>
                 <div class="content">
                   <h4>Days Two and Three - Synthetic Biology</h4>
@@ -384,7 +384,7 @@
             <div class="offset-lg-1 col-lg-6 col-md-6">
               <div class="image-content-box" data-aos="fade-up" data-aos-delay="500" data-aos-duration="1000">
                 <div class="case-study-area-image image-hover-style-01 overflow-hidden">
-                  <img class="w-100" src="/image/masonry/unknown-4.png" alt="image" />
+                  <img class="w-100" src="/image/daily/day-3.jpg" alt="image" />
                 </div>
                 <div class="content">
                   <h4>Day Four - Chemistry</h4>
@@ -393,7 +393,7 @@
               </div>
               <div class="image-content-box" data-aos="fade-up" data-aos-delay="700" data-aos-duration="1000">
                 <div class="case-study-area-image image-hover-style-01 overflow-hidden">
-                  <img class="w-100" src="/image/masonry/unknown-5.png" alt="image" />
+                  <img class="w-100" src="/image/daily/day-4.png" alt="image" />
                 </div>
                 <div class="content">
                   <h4>Day Five - Forensics</h4>
