fix: submit func

--- a/views/about.html
+++ b/views/about.html
@@ -302,7 +302,7 @@
                   <div class="input-group">
                     <input name="email" type="text" class="form-control" placeholder="Enter your email address" aria-label="" />
                     <div class="input-group-append">
-                      <button class="btn border-0 focus-reset" type="button">
+                      <button class="btn border-0 focus-reset" type="submit">
                         <i class="fas fa-angle-right text-white"></i>
                       </button>
                     </div>
