--- a/views/about.html
+++ b/views/about.html
@@ -193,7 +193,7 @@
                 <div class="img-1">
                   <img
                     class="w-100 rounded-10"
-                    src="/image/masonry/unknown-8.png"
+                    src="/image/masonry/First Gel.jpg"
                     alt=""
                     data-aos="fade-right"
                     data-aos-duration="600"
