--- a/views/about.html
+++ b/views/about.html
@@ -227,6 +227,10 @@
                   published to Amazon, which won us the Best Education award. We also received a gold medal overall and were among
                   the top 10 high school teams internationally.
                 </p>
+                <a href="https://2021.igem.org/Team:CCA_San_Diego" class="btn focus-reset">
+                  Visit our last year's team wiki
+                  <i class="fas fa-angle-right"></i>
+                </a>
               </div>
             </div>
             <!-- Left End -->
