--- a/views/about.html
+++ b/views/about.html
@@ -78,24 +78,6 @@
                   <div class="mobile-menu-close">&times;</div>
                 </div>
                 <ul class="site-menu-main">
-                  <!-- <li class="nav-item nav-item-has-children">
-                    <a href="#" class="nav-link-item drop-trigger">Dropdowns <i class="fas fa-angle-down"></i> </a>
-                    <ul class="sub-menu" id="submenu-9">
-                      <li class="sub-menu--item">
-                        <a href="#">Dropdown 01</a>
-                      </li>
-                      <li class="sub-menu--item">
-                        <a href="#">Dropdown 02</a>
-                      </li>
-                      <li class="sub-menu--item">
-                        <a href="#">Dropdown 03</a>
-                      </li>
-                      <li class="sub-menu--item">
-                        <a href="#">Dropdown 04</a>
-                      </li>
-                    </ul>
-                  </li> -->
-
                   <li class="nav-item">
                     <a href="/camp-info" class="nav-link-item">Camp Information</a>
                   </li>
@@ -109,7 +91,12 @@
               </nav>
             </div>
             <div class="header-btn header-btn-l-14 ms-auto d-none d-xs-inline-flex">
-              <a target="_blank" class="btn btn trail-btn focus-reset" href="https://docs.google.com/forms/d/1S0Yvdufq8JCyBas6W0HmJXjTsdbe69OfWhyquYiT1Xk/edit">Get Started</a>
+              <a
+                target="_blank"
+                class="btn btn trail-btn focus-reset"
+                href="https://docs.google.com/forms/d/1S0Yvdufq8JCyBas6W0HmJXjTsdbe69OfWhyquYiT1Xk/edit"
+                >Get Started</a
+              >
             </div>
             <!-- mobile menu trigger -->
             <div class="mobile-menu-trigger">
@@ -227,36 +214,17 @@
                   published to Amazon, which won us the Best Education award. We also received a gold medal overall and were among
                   the top 10 high school teams internationally.
                 </p>
-                <a href="https://2021.igem.org/Team:CCA_San_Diego" class="btn focus-reset">
-                  Visit our last year's team wiki
-                  <i class="fas fa-angle-right"></i>
-                </a>
+                <div class="about-btn">
+                  <a href="https://2021.igem.org/Team:CCA_San_Diego" class="btn"
+                    >Visit the 2021 wiki
+                    <i class="fas fa-angle-right"></i>
+                  </a>
+                </div>
               </div>
             </div>
-            <!-- Left End -->
           </div>
         </div>
       </div>
-      <!-- <div class="pb-11 pb-md-15 pb-lg-27">
-      <div class="container">
-        <div class="col-4">
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. In, ex sint? Obcaecati tenetur saepe ut reiciendis, facilis
-          vitae aspernatur eius distinctio minus ab totam pariatur earum enim necessitatibus natus amet omnis consequuntur.
-          Veritatis reprehenderit neque aspernatur dolore explicabo doloremque suscipit?
-        </div>
-        <div class="col-4">
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. In, ex sint? Obcaecati tenetur saepe ut reiciendis, facilis
-          vitae aspernatur eius distinctio minus ab totam pariatur earum enim necessitatibus natus amet omnis consequuntur.
-          Veritatis reprehenderit neque aspernatur dolore explicabo doloremque suscipit?
-        </div>
-        <div class="col-4">
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. In, ex sint? Obcaecati tenetur saepe ut reiciendis, facilis
-          vitae aspernatur eius distinctio minus ab totam pariatur earum enim necessitatibus natus amet omnis consequuntur.
-          Veritatis reprehenderit neque aspernatur dolore explicabo doloremque suscipit?
-        </div>
-      </div>
-    </div> -->
-      <!-- Footer Area -->
 
       <footer class="footer-area-l-12 position-relative">
         <div class="container">
