--- a/views/camp-info.html
+++ b/views/camp-info.html
@@ -339,8 +339,8 @@
                 <div class="">
                   <h4 class="font-size-7 mb-7">Is lunch provided?</h4>
                   <p class="font-size-5 pr-md-10 pr-lg-0 mb-0">
-                    Lunch is not included in the original price, so students should bring their own lunches daily. For a price of
-                    $5 a day, we will provide lunch. It will most likely be common school lunches, such as pizza or sandwiches.
+                    Lunch is not included. Students should bring their own lunches daily. Lorem ipsum dolor sit amet consectetur
+                    adipisicing elit. Accusantium nisi et dolorem. Maxime facilis quasi, maiores soluta debitis explicabo est.
                   </p>
                 </div>
               </div>
