--- a/views/camp-info.html
+++ b/views/camp-info.html
@@ -339,7 +339,7 @@
                 <div class="">
                   <h4 class="font-size-7 mb-7">Is lunch provided?</h4>
                   <p class="font-size-5 pr-md-10 pr-lg-0 mb-0">
-                    Lunch is not included. Students should bring their own lunches daily, which can be eaten during the 30 minute lunch break.
+                    Lunch is not included. Students should bring their own lunches daily, which can be eaten during the lunch break. Students may also bring a snack.
                   </p>
                 </div>
               </div>
