add: support link

--- a/views/about.html
+++ b/views/about.html
@@ -85,7 +85,7 @@
                     <a href="/about" class="nav-link-item">About Us</a>
                   </li>
                   <li class="nav-item">
-                    <a href="https://uxtheme.net/product-support/" class="nav-link-item">Support</a>
+                    <a href="https://gofund.me/8b23fc16" class="nav-link-item">Support</a>
                   </li>
                 </ul>
               </nav>
@@ -237,7 +237,7 @@
                     <ul class="widget-links pl-0 list-unstyled">
                       <li><a href="/camp-info">Camp Info</a></li>
                       <li><a href="/about">About Us</a></li>
-                      <li><a href="#">Support</a></li>
+                      <li><a href="https://gofund.me/8b23fc16">Support</a></li>
                     </ul>
                   </div>
                 </div>
