--- a/views/camp-info.html
+++ b/views/camp-info.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>About Us</title>
+    <title>Camp Information</title>
     <link rel="shortcut icon" href="/image/favicon.png" type="image/x-icon" />
     <!-- Primary Meta Tags -->
     <meta name="title" content="CCA iGEM Summer Camp | Join Today!" />
