--- a/views/about.html
+++ b/views/about.html
@@ -144,7 +144,7 @@
               <div class="text-center mb-11 mb-lg-24" data-aos="zoom-in" data-aos-duration="500" data-aos-once="true">
                 <h2 class="font-size-11 mb-5">About us</h2>
                 <p class="font-size-7 mb-0">
-                  We are a Synthetic Biology club based in Canyon Crest Academy. Read more about our accomplishments and why we
+                  We are a Synthetic Biology team based in Canyon Crest Academy. Read more about our accomplishments and why we
                   are qualified to host this camp!
                 </p>
               </div>
@@ -210,13 +210,13 @@
                   and entrepreneurship.
                 </p>
                 <p class="heading-default-color font-size-6 mb-5 mb-lg-13">
-                  We focus a lot on our education. Last year, we ran iGEM camp and wrote a book about Biochemistry that we
-                  published to Amazon, which won us the Best Education award. We also received a gold medal overall and were among
-                  the top 10 high school teams internationally.
+                  In 2021, our team ran the iGEM Science Camp and wrote a book about Biochemistry that we
+                  published to Amazon, winning the Best Education award. We also received a gold medal overall and were among
+                  the top 10 high school teams worldwide.
                 </p>
                 <div class="about-btn">
                   <a href="https://2021.igem.org/Team:CCA_San_Diego" class="btn"
-                    >Visit the 2021 wiki
+                    >Visit last year's wiki
                     <i class="fas fa-angle-right"></i>
                   </a>
                 </div>
