--- a/views/camp-info.html
+++ b/views/camp-info.html
@@ -246,10 +246,10 @@
                   years. The past two had been online because of the pandemic.
                 </p>
                 <p class="heading-default-color font-size-6 mb-5 mb-lg-13">
-                  Our camp will teach many different important science topics such as biology, synthetic biology, chemistry, and
-                  forensics, as well as have daily labs that will reinforce what the students learned. The content we teach will
-                  not only prepare students for high school-level courses such as biology and chemistry, but it will also help
-                  their application should they wish to be a part of CCA’s iGEM team in high school.
+                  Our camp will teach several important science topics such as biology, synthetic biology, chemistry, and
+                  forensicsand organize daily labs to reinforce the students' learning in a hands-on environment. The content
+                  we teach will thoroughly prepare students for high school biology and chemistry coursework and for
+                  participation in CCA's iGEM team.
                 </p>
               </div>
             </div>
