--- a/views/about.html
+++ b/views/about.html
@@ -94,7 +94,7 @@
               <a
                 target="_blank"
                 class="btn btn trail-btn focus-reset"
-                href="https://docs.google.com/forms/d/1S0Yvdufq8JCyBas6W0HmJXjTsdbe69OfWhyquYiT1Xk/edit"
+                href="https://fs30.formsite.com/ccaf/igem2022/index.html"
                 >Get Started</a
               >
             </div>
