--- a/views/camp-info.html
+++ b/views/camp-info.html
@@ -246,7 +246,7 @@
                   years. The past two had been online because of the pandemic.
                 </p>
                 <p class="heading-default-color font-size-6 mb-5 mb-lg-13">
-                  Our camp will teach several important science topics such as biology, synthetic biology, chemistry, and
+                  Our camp, led by CCA iGEM members, will teach several important science topics such as biology, synthetic biology, chemistry, and
                   forensics and organize daily labs to reinforce the students' learning in a hands-on environment. The content
                   we teach will thoroughly prepare students for high school biology and chemistry coursework and for
                   participation in CCA's iGEM team.
