--- a/views/about.html
+++ b/views/about.html
@@ -94,7 +94,7 @@
               <a
                 target="_blank"
                 class="btn btn trail-btn focus-reset"
-                href="https://fs30.formsite.com/ccaf/igem2022/index.html"
+                href="https://fs30.formsite.com/ccaf/igem23/index"
                 >Get Started</a
               >
             </div>
@@ -210,12 +210,13 @@
                   and entrepreneurship.
                 </p>
                 <p class="heading-default-color font-size-6 mb-5 mb-lg-13">
-                  In 2021, our team ran the iGEM Science Camp and wrote a book about Biochemistry that we
+                  In 2021, our team ran the iGEM Science Camp online and wrote a book about Biochemistry that we
                   published to Amazon, winning the Best Education award. We also received a gold medal overall and were among
-                  the top 10 high school teams worldwide.
+                  the top 10 high school teams worldwide. In 2022, we ran our first successful in-person camp after quarantine!
                 </p>
+            
                 <div class="about-btn">
-                  <a href="https://2021.igem.org/Team:CCA_San_Diego" class="btn"
+                  <a href="https://2022.igem.wiki/cca-san-diego/" class="btn"
                     >Visit last year's wiki
                     <i class="fas fa-angle-right"></i>
                   </a>
