--- a/views/camp-info.html
+++ b/views/camp-info.html
@@ -112,7 +112,7 @@
               <a
                 target="_blank"
                 class="btn btn trail-btn focus-reset"
-                href="https://fs30.formsite.com/ccaf/igem2022/index.html"
+                href="https://fs30.formsite.com/ccaf/igem23/index"
                 >Get Started</a
               >
             </div>
@@ -240,16 +240,15 @@
             <div class="col-xl-6 col-lg-7 col-md-7 col-xs-10">
               <div class="mx-lg-14 mx-xl-14" data-aos="fade-left" data-aos-duration="600" data-aos-once="true">
                 <p class="heading-default-color font-size-6 mb-4 mb-lg-9">
-                  This is the fifth annual science summer camp hosted by CCA’s iGEM team! We teach advanced pre-high school
+                  This is the sixth annual science summer camp hosted by CCA’s iGEM team! We teach advanced pre-high school
                   students who are interested in pursuing a STEM career in the future, or want to explore different possible
-                  career options. We are very excited for this year’s iGEM camp because it’s the first in-person camp in two
-                  years. The past two had been online because of the pandemic.
+                  career options. We are very excited for this year’s iGEM camp after last year being such a success.
                 </p>
                 <p class="heading-default-color font-size-6 mb-5 mb-lg-13">
                   Our camp, led by CCA iGEM members, will teach several important science topics such as biology, synthetic biology, chemistry, and
                   forensics and organize daily labs to reinforce the students' learning in a hands-on environment. The content
-                  we teach will thoroughly prepare students for high school biology and chemistry coursework and for
-                  participation in CCA's iGEM team.
+                  we teach will thoroughly prepare students for high school biology and chemistry coursework and for potential 
+                  participation in CCA's iGEM team. 
                 </p>
               </div>
             </div>
@@ -282,7 +281,7 @@
                 <div class="">
                   <h4 class="font-size-7 mb-7">When does the camp take place?</h4>
                   <p class="font-size-5 pr-md-10 pr-lg-0 mb-0">
-                    We will be holding two sessions, one from June 13-17th, and one from August 1-5th. Daily times will be from 9
+                    We will be holding two sessions over the 2023 summer, one from June 5-9th, and one from August 7-11th. Daily times will be from 9
                     am to 2 pm, which includes a lunch and snack break.
                   </p>
                 </div>
@@ -320,9 +319,7 @@
                   <h4 class="font-size-7 mb-7">How much does it cost to attend?</h4>
                   <p class="font-size-5 pr-md-10 pr-lg-0 mb-0">
                     $350 early bird, $400 after May 10th. Tuition will pay for the fun labs we prepare every day, as well as help
-                    us enroll in the iGEM competition in October. Tuition will not be refunded if our camp stays in-person. Camp
-                    attendees who refer the camp to other students will get a $20 discount off of their tuition, so please spread
-                    the word!
+                    us enroll in the iGEM competition in October. Tuition will NOT be refunded if our camp stays in-person. 
                   </p>
                 </div>
               </div>
@@ -339,7 +336,7 @@
                 <div class="">
                   <h4 class="font-size-7 mb-7">Is lunch provided?</h4>
                   <p class="font-size-5 pr-md-10 pr-lg-0 mb-0">
-                    Lunch is not included. Students should bring their own lunches daily, which can be eaten during the lunch break. Students may also bring a snack.
+                    Lunch is not included. Students should bring their own lunches daily, which can be eaten during the lunch break. Students may also bring a snack, but snacks may be provided by us.
                   </p>
                 </div>
               </div>
@@ -434,7 +431,7 @@
                   <div class="footer-widget widget4">
                     <p class="widget-title">General</p>
                     <ul class="widget-links pl-0 list-unstyled">
-                      <li><a>&copy; CCA iGEM 2022.</a></li>
+                      <li><a>&copy; CCA iGEM 2023.</a></li>
                       <li>
                         <a href="https://instagram.com/cca.igem" style="padding-right: 3px" target="_blank">
                           <i class="fa-brands fa-instagram"></i
