--- a/views/camp-info.html
+++ b/views/camp-info.html
@@ -364,7 +364,7 @@
                 </div>
                 <div class="content">
                   <h4>Day One - Biology</h4>
-                  <p>Lab: DNA Extraction</p>
+                  <p>We will dive deep into DNA, cells and cell energetics, and reinforce the learned knowledge with labs such as DNA extraction and microscope use! We will also cover lab safety.</p>
                 </div>
               </div>
               <div class="image-content-box" data-aos="fade-up" data-aos-delay="600" data-aos-duration="1000">
@@ -372,8 +372,8 @@
                   <img class="w-100" src="/image/daily/day-2.jpg" alt="image" />
                 </div>
                 <div class="content">
-                  <h4>Days Two and Three - Synthetic Biology</h4>
-                  <p>Lab: Bacterial Transformation with GFP</p>
+                  <h4>Day Two - Chemistry</h4>
+                  <p>Don't fear--chemistry can be a really fun and interesting topic when learned the right way! We'll start off with how the periodic table is arranged and how chemical reactions happen, and get into pH as well. We'll be doing three labs on this day corresponding with each of the concepts we learn.</p>
                 </div>
               </div>
             </div>
@@ -383,8 +383,8 @@
                   <img class="w-100" src="/image/daily/day-3.jpg" alt="image" />
                 </div>
                 <div class="content">
-                  <h4>Day Four - Chemistry</h4>
-                  <p>Lab: Reactions Lab (specifics TBD)</p>
+                  <h4>Days Three and Four - Synthetic Biology</h4>
+                  <p>Synbio is what we do best at iGEM! It's the science of altering DNA and genes. We'll teach how genetic editing is done in labs and even discuss the ethics of it, as well as how enzymes work. Throughout the two days, we'll be inserting genes into bacteria to see it glow.</p>
                 </div>
               </div>
               <div class="image-content-box" data-aos="fade-up" data-aos-delay="700" data-aos-duration="1000">
@@ -393,7 +393,7 @@
                 </div>
                 <div class="content">
                   <h4>Day Five - Forensics</h4>
-                  <p>Lab: Crime Scene Analysis Lab</p>
+                  <p>For the last day of camp, we'll be tying in all our knowledge to investigate a crime scene! Students will be analyzing blood samples, chemical properties of different substances, and more!</p>
                 </div>
               </div>
             </div>
