--- a/views/camp-info.html
+++ b/views/camp-info.html
@@ -282,7 +282,7 @@
                   <h4 class="font-size-7 mb-7">When does the camp take place?</h4>
                   <p class="font-size-5 pr-md-10 pr-lg-0 mb-0">
                     We will be holding two sessions over the 2023 summer, one from June 5-9th, and one from June 12-16th. Daily times will be from 9
-                    am to 2 pm, which includes a lunch and snack break.
+                    am to 2 pm, which includes a lunch and snack break. The registration form currently doesn't have an option for the second session--we'll be sure to get that updated soon!
                   </p>
                 </div>
               </div>
