--- a/views/camp-info.html
+++ b/views/camp-info.html
@@ -248,7 +248,7 @@
                   Our camp, led by CCA iGEM members, will teach several important science topics such as biology, synthetic biology, chemistry, and
                   forensics and organize daily labs to reinforce the students' learning in a hands-on environment. The content
                   we teach will thoroughly prepare students for high school biology and chemistry coursework and for potential 
-                  participation in CCA's iGEM team. 
+                  participation in CCA's iGEM team. You can view pictures from last year's camp <a href = "https://drive.google.com/drive/folders/1zdzY7n_lbzefpmgcZiCS1KBGwnWSG3Wn?usp=sharing">here!</a> 
                 </p>
               </div>
             </div>
