--- a/views/camp-info.html
+++ b/views/camp-info.html
@@ -373,7 +373,7 @@
                 </div>
                 <div class="content">
                   <h4>Day Two - Chemistry</h4>
-                  <p>Don't fear--chemistry can be a really fun and interesting topic when learned the right way! We'll start off with how the periodic table is arranged and how chemical reactions happen, and get into pH as well. We'll be doing three labs on this day corresponding with each of the concepts we learn.</p>
+                  <p>Don't fear&mdash;chemistry can be a really fun and interesting topic when learned the right way! We'll start off with how the periodic table is arranged and how chemical reactions happen, and get into pH as well. We'll be doing three labs on this day corresponding with each of the concepts we learn.</p>
                 </div>
               </div>
             </div>
