feat: team pic, some masonry for hackathon

--- a/views/camp-info.html
+++ b/views/camp-info.html
@@ -97,13 +97,16 @@
                   </li> -->
 
                   <li class="nav-item">
-                    <a href="/camp-info" class="nav-link-item">Camp Information</a>
+                    <a href="/camp-information" class="nav-link-item">Camp Information</a>
+                  </li>
+                  <li class="nav-item">
+                    <a href="/hackathon" class="nav-link-item">Hackathon</a>
                   </li>
                   <li class="nav-item">
                     <a href="/about" class="nav-link-item">About Us</a>
                   </li>
                   <li class="nav-item">
-                    <a href="https://gofund.me/8b23fc16" class="nav-link-item">Support</a>
+                    <a href="https://gofund.me/8b23fc16" class="nav-link-item">Donate</a>
                   </li>
                 </ul>
               </nav>
@@ -262,7 +265,7 @@
           <div class="row justify-content-center">
             <div class="col-xl-8 col-lg-9">
               <div class="text-center mb-13 mb-lg-19">
-                <h2 class="font-size-9 mb-0">Logistics</h2>
+                <h2 class="font-size-9 mb-0">Frequently Asked Questions</h2>
               </div>
             </div>
           </div>
@@ -412,9 +415,9 @@
                   <div class="footer-widget widget2">
                     <p>Help menu</p>
                     <ul class="widget-links pl-0 list-unstyled">
-                      <li><a href="/camp-info">Camp Info</a></li>
+                      <li><a href="/camp-information">Camp Info</a></li>
                       <li><a href="/about">About Us</a></li>
-                      <li><a href="https://gofund.me/8b23fc16">Support</a></li>
+                      <li><a href="https://gofund.me/8b23fc16">Donate</a></li>
                     </ul>
                   </div>
                 </div>
