--- a/views/about.html
+++ b/views/about.html
@@ -79,13 +79,16 @@
                 </div>
                 <ul class="site-menu-main">
                   <li class="nav-item">
-                    <a href="/camp-info" class="nav-link-item">Camp Information</a>
+                    <a href="/camp-information" class="nav-link-item">Camp Information</a>
+                  </li>
+                  <li class="nav-item">
+                    <a href="/hackathon" class="nav-link-item">Hackathon</a>
                   </li>
                   <li class="nav-item">
                     <a href="/about" class="nav-link-item">About Us</a>
                   </li>
                   <li class="nav-item">
-                    <a href="https://gofund.me/8b23fc16" class="nav-link-item">Support</a>
+                    <a href="https://gofund.me/8b23fc16" class="nav-link-item">Donate</a>
                   </li>
                 </ul>
               </nav>
@@ -156,8 +159,8 @@
         <div class="container-fluid">
           <div class="row">
             <div class="col-12">
-              <div class="rounded-8" data-aos="fade-up" data-aos-duration="800" data-aos-once="true">
-                <img class="w-100" src="/image/l4/team.png" alt="" />
+              <div class="rounded-8 w-100" data-aos="fade-up" data-aos-duration="800" data-aos-once="true">
+                <img class="w-100" src="/image/l4/team.jpg" alt="" />
               </div>
             </div>
           </div>
@@ -236,9 +239,9 @@
                   <div class="footer-widget widget2">
                     <p>Help menu</p>
                     <ul class="widget-links pl-0 list-unstyled">
-                      <li><a href="/camp-info">Camp Info</a></li>
+                      <li><a href="/camp-information">Camp Info</a></li>
                       <li><a href="/about">About Us</a></li>
-                      <li><a href="https://gofund.me/8b23fc16">Support</a></li>
+                      <li><a href="https://gofund.me/8b23fc16">Donate</a></li>
                     </ul>
                   </div>
                 </div>
