--- a/views/hackathon.html
+++ b/views/hackathon.html
@@ -112,10 +112,7 @@
               </nav>
             </div>
             <div class="header-btn header-btn-l-14 ms-auto d-none d-xs-inline-flex">
-              <a
-                target="_blank"
-                class="btn btn trail-btn focus-reset"
-                href="https://fs30.formsite.com/ccaf/igem23/index"
+              <a target="_blank" class="btn btn trail-btn focus-reset" href="https://fs30.formsite.com/ccaf/igem23/index"
                 >Get Started</a
               >
             </div>
@@ -161,11 +158,14 @@
         <div class="container">
           <!-- Section Padding -->
           <div class="row justify-content-center">
-            <div class="col-xl-7 col-lg-8 col-md-11">
+            <div class="col-xl-8 col-lg-9 col-md-11">
               <div class="text-center mb-11 mb-lg-24" data-aos="zoom-in" data-aos-duration="500" data-aos-once="true">
                 <h2 class="font-size-11 mb-5">Hackathon</h2>
                 <p class="font-size-7 mb-0">
-                  This year, CCA iGEM is hosting a free hackathon open to all elementary, middle and high school students!
+                  CCA iGEM is hosting a free hackathon for 5th-8th graders! We want to encourage young STEM minds of the next
+                  generation to be exposed to problem solving and research. We will introduce a problem to be solved and give
+                  teams about a week to think of a solution and create a display, and we will be judging them in-person or online
+                  on competition day. <a href="https://forms.gle/5oLxjd9SHjiWBGCQ6" target="_blank">Register here</a>!
                 </p>
               </div>
             </div>
@@ -202,62 +202,6 @@
           </div>
         </div>
       </div>
-      <div class="pb-11 pb-md-15 pb-lg-27">
-        <div class="container">
-          <div class="row justify-content-center">
-            <div class="col-xl-5 col-lg-6 col-sm-9">
-              <div class="text-center mb-13 mb-lg-16" data-aos="zoom-in" data-aos-duration="500" data-aos-once="true">
-                <h2 class="font-size-10 mb-0 letter-spacing-n83">About the Camp</h2>
-              </div>
-            </div>
-          </div>
-          <div class="row align-items-center justify-content-center">
-            <!-- Right -->
-            <div class="col-xl-5 col-lg-5 col-md-5 col-xs-10">
-              <div class="about-content-image-group-1 mb-8 mb-lg-0 mr-lg-4">
-                <div class="img-1">
-                  <img
-                    class="w-100 rounded-10"
-                    src="/image/masonry/unknown-8.png"
-                    alt=""
-                    data-aos="fade-right"
-                    data-aos-duration="600"
-                    data-aos-once="true"
-                  />
-                  <div class="img-2 z-index-n1 mt-n13">
-                    <img
-                      class="w-100"
-                      src="/image/l4/dot-pattern-black.png"
-                      alt=""
-                      data-aos="fade-right"
-                      data-aos-duration="500"
-                      data-aos-once="true"
-                    />
-                  </div>
-                </div>
-              </div>
-            </div>
-            <!-- Right -->
-            <!-- Left -->
-            <div class="col-xl-6 col-lg-7 col-md-7 col-xs-10">
-              <div class="mx-lg-14 mx-xl-14" data-aos="fade-left" data-aos-duration="600" data-aos-once="true">
-                <p class="heading-default-color font-size-6 mb-4 mb-lg-9">
-                  This is the sixth annual science summer camp hosted by CCA’s iGEM team! We teach advanced pre-high school
-                  students who are interested in pursuing a STEM career in the future, or want to explore different possible
-                  career options. We are very excited for this year’s iGEM camp after last year being such a success.
-                </p>
-                <p class="heading-default-color font-size-6 mb-5 mb-lg-13">
-                  Our camp, led by CCA iGEM members, will teach several important science topics such as biology, synthetic biology, chemistry, and
-                  forensics and organize daily labs to reinforce the students' learning in a hands-on environment. The content
-                  we teach will thoroughly prepare students for high school biology and chemistry coursework and for potential 
-                  participation in CCA's iGEM team. You can view pictures from last year's camp <a href = "https://drive.google.com/drive/folders/1zdzY7n_lbzefpmgcZiCS1KBGwnWSG3Wn?usp=sharing">here!</a> 
-                </p>
-              </div>
-            </div>
-            <!-- Left End -->
-          </div>
-        </div>
-      </div>
       <div class="pb-13 pb-md-18 pb-lg-25">
         <div class="container">
           <!-- Section Title -->
@@ -270,8 +214,7 @@
           </div>
           <!-- End Section Title -->
           <!-- Faqs -->
-          <!-- Faqs -->
-          <div class="row justify-content-center">
+          <div class="row justify-content-start">
             <!-- Single Faq -->
             <div class="col-lg-6 col-md-10">
               <div class="d-flex mb-10 mb-lg-17" data-aos="fade-up" data-aos-duration="300" data-aos-once="true">
@@ -281,10 +224,11 @@
                   </div>
                 </div>
                 <div class="">
-                  <h4 class="font-size-7 mb-7">When does the camp take place?</h4>
+                  <h4 class="font-size-7 mb-7">Who can participate?</h4>
                   <p class="font-size-5 pr-md-10 pr-lg-0 mb-0">
-                    We will be holding two sessions over the 2023 summer, one from June 5-9th, and one from June 12-16th. Daily times will be from 9
-                    am to 2 pm, which includes a lunch and snack break. The registration form currently doesn't have an option for the second session--we'll be sure to get that updated soon!
+                    This hackathon is recommended for 5th-8th graders, but younger students can also register. Students in grades
+                    higher than 8th in the 2023-24 school year may not participate. Teams can be up to three individuals, who can
+                    be in different grades.
                   </p>
                 </div>
               </div>
@@ -299,11 +243,10 @@
                   </div>
                 </div>
                 <div class="">
-                  <h4 class="font-size-7 mb-7">Where will the camp be held?</h4>
+                  <h4 class="font-size-7 mb-7">What dates should I keep in mind?</h4>
                   <p class="font-size-5 pr-md-10 pr-lg-0 mb-0">
-                    We expect this year's camp to be held in-person at Canyon Crest Academy, but due to the unpredictability of
-                    COVID, we cannot guarantee that the camp will be in-person. If we need to move to an online format, we will
-                    notify all parents and give a full refund for those who are unwilling to attend the camp online.
+                    Deadline to register is Wednesday, August 23rd. Prompt will be released near August 26th. The day of the
+                    competition is September 2nd.
                   </p>
                 </div>
               </div>
@@ -318,10 +261,11 @@
                   </div>
                 </div>
                 <div class="">
-                  <h4 class="font-size-7 mb-7">How much does it cost to attend?</h4>
+                  <h4 class="font-size-7 mb-7">When and where will the hackathon take place?</h4>
                   <p class="font-size-5 pr-md-10 pr-lg-0 mb-0">
-                    $350 early bird, $400 after May 10th. Tuition will pay for the fun labs we prepare every day, as well as help
-                    us enroll in the iGEM competition in October. Tuition will NOT be refunded if our camp stays in-person. 
+                    The competition will be held on September 2nd at 2 PM to 5 PM at the Rancho Bernardo library. Competitors are
+                    expected to create a posterboard of their project within a week. Teams may compete online on Zoom, but
+                    in-person teams will be judged more favorably.
                   </p>
                 </div>
               </div>
@@ -336,9 +280,28 @@
                   </div>
                 </div>
                 <div class="">
-                  <h4 class="font-size-7 mb-7">Is lunch provided?</h4>
+                  <h4 class="font-size-7 mb-7">What prizes can I look forward to?</h4>
                   <p class="font-size-5 pr-md-10 pr-lg-0 mb-0">
-                    Lunch is not included. Students should bring their own lunches daily, which can be eaten during the lunch break. Students may also bring a snack, but snacks may be provided by us.
+                    1st place team receives $100, and 2nd place receives $50. We may also have special prizes for different
+                    categories, depending on the number of teams that register.
+                  </p>
+                </div>
+              </div>
+            </div>
+            <!-- End Single Faq -->
+            <!-- Single Faq -->
+            <div class="col-lg-6 col-md-10">
+              <div class="d-flex mb-10 mb-lg-17" data-aos="fade-up" data-aos-duration="600" data-aos-once="true">
+                <div class="mr-6">
+                  <div class="bg-light-orange circle-28 text-white mt-1">
+                    <i class="fa fa-question"></i>
+                  </div>
+                </div>
+                <div class="">
+                  <h4 class="font-size-7 mb-7">How much will it cost to register?</h4>
+                  <p class="font-size-5 pr-md-10 pr-lg-0 mb-0">
+                    This hackathon is totally free for all students! This is a great educational opportunity, and we aim to make
+                    it as accessible for all as possible.
                   </p>
                 </div>
               </div>
@@ -349,60 +312,6 @@
           <!-- Button End -->
         </div>
       </div>
-      <div class="case-study-area-l3 inner-service-01">
-        <div class="container">
-          <div class="row justify-content-center">
-            <div class="col-xl-8 col-lg-9">
-              <div class="text-center mb-13 mb-lg-19">
-                <h2 class="font-size-9 mb-0">Topics covered</h2>
-              </div>
-            </div>
-          </div>
-          <div class="row case-study-items-l3 justify-content-center">
-            <div class="col-lg-5 col-md-6">
-              <div class="image-content-box" data-aos="fade-up" data-aos-delay="400" data-aos-duration="1000">
-                <div class="case-study-area-image image-hover-style-01 overflow-hidden">
-                  <img class="w-100" src="/image/daily/day-1.jpg" alt="image" />
-                </div>
-                <div class="content">
-                  <h4>Day One - Biology</h4>
-                  <p>We will dive deep into DNA, cells and cell energetics, and reinforce the learned knowledge with labs such as DNA extraction and microscope use! We will also cover lab safety.</p>
-                </div>
-              </div>
-              <div class="image-content-box" data-aos="fade-up" data-aos-delay="600" data-aos-duration="1000">
-                <div class="case-study-area-image image-hover-style-01 overflow-hidden">
-                  <img class="w-100" src="/image/daily/day-2.jpg" alt="image" />
-                </div>
-                <div class="content">
-                  <h4>Day Two - Chemistry</h4>
-                  <p>Don't fear&mdash;chemistry can be a really fun and interesting topic when learned the right way! We'll start off with how the periodic table is arranged and how chemical reactions happen, and get into pH as well. We'll be doing three labs on this day corresponding with each of the concepts we learn.</p>
-                </div>
-              </div>
-            </div>
-            <div class="offset-lg-1 col-lg-6 col-md-6">
-              <div class="image-content-box" data-aos="fade-up" data-aos-delay="500" data-aos-duration="1000">
-                <div class="case-study-area-image image-hover-style-01 overflow-hidden">
-                  <img class="w-100" src="/image/daily/day-3.jpg" alt="image" />
-                </div>
-                <div class="content">
-                  <h4>Days Three and Four - Synthetic Biology</h4>
-                  <p>Synbio is what we do best at iGEM! It's the science of altering DNA and genes. We'll teach how genetic editing is done in labs and even discuss the ethics of it, as well as how enzymes work. Throughout the two days, we'll be inserting genes into bacteria to see it glow.</p>
-                </div>
-              </div>
-              <div class="image-content-box" data-aos="fade-up" data-aos-delay="700" data-aos-duration="1000">
-                <div class="case-study-area-image image-hover-style-01 overflow-hidden">
-                  <img class="w-100" src="/image/daily/day-4.png" alt="image" />
-                </div>
-                <div class="content">
-                  <h4>Day Five - Forensics</h4>
-                  <p>For the last day of camp, we'll be tying in all our knowledge to investigate a crime scene! Students will be analyzing blood samples, chemical properties of different substances, and more!</p>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-
       <!-- Footer Area -->
 
       <footer class="footer-area-l-12 position-relative">
